improve style for floating button

--- a/scss/partials/_edit_topic_button.scss
+++ b/scss/partials/_edit_topic_button.scss
@@ -3,16 +3,17 @@ div.topic-row.edit-topic-button{
   div.edit-topic-button-internal {
     margin: 10px;
     border: 1px dotted black;
+    background-color: white;
     height: 50px;
     vertical-align: middle;
     text-align: center;
+    cursor: pointer;
 
     div.edit-topic-button-cta{
       padding: 0;
       margin: 8px 0;
       font-size: 19px;
       font-weight: bold;
-      cursor: pointer;
     }
   }
 }
