--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -19,5 +19,11 @@ div.topic-list{
     padding: 0px;
     margin: 0px;
     width: 100%;
+
+    &.floating-edit-topic-button {
+      position: fixed;
+      bottom: 0px;
+      background-color: rgba(255, 255, 255, 0.4);
+    }
   }
 }
