--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -1,17 +1,21 @@
 div.topic-list{
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(217, 217, 217);
   content: "";
 
-  div.topic-list-internal:empty {
-    text-align: center;
-    font-size: 18px;
-    padding-top: 100px;
-    color: rgba(0, 0, 0, 0.4);
-    font-family: $oc_main_font;
-    height: 200px;
+  div.topic-list-internal {
+    margin-top: 10px;
 
-    &:after {
-      content: "This category seams to be empty. Add a topic below to fill it out.";
+    &:empty {
+      text-align: center;
+      font-size: 18px;
+      padding-top: 100px;
+      color: rgba(0, 0, 0, 0.4);
+      font-family: $oc_main_font;
+      height: 200px;
+
+      &:after {
+        content: "This category seams to be empty. Add a topic below to fill it out.";
+      }
     }
   }
 
