fix topic list edit style

--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -1,6 +1,6 @@
 div.topic-list-edit{
-  background-color: rgb(250, 250, 250);
-  margin-bottom: 10px;
+  background-color: rgb(217, 217, 217);
+  padding-bottom: 10px;
 
   & * {
     @include no-user-select();
