--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,7 +41,7 @@
 @import "partials/_sidebar";
 @import "partials/_charts";
 @import "partials/_headline";
-@import "partials/_manage_topic";
+@import "partials/_manage_topics";
 @import "partials/_topic_list_edit";
 @import "partials/_sortable_list";
 @import "partials/_edit_topic_button";
