--- a/scss/partials/_edit_topic.scss
+++ b/scss/partials/_edit_topic.scss
@@ -1,49 +1,55 @@
 div.edit-topic {
-  margin: 10px;
-  background-color: white;
+  background-color: transparent;
+  padding: 10px;
 
-  & > div {
-    padding-top: 10px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  }
+  div.edit-topic-internal{
+    background-color: white;
+    min-height: 200px;
+    padding: 10px;
 
-  div.edit-topic-title {
-    input {
-      font-family: "#{$oc_headers_font}";
-      border: 1px solid transparent;
-      font-size: 20px;
-      width: 100%;
+    & > div {
+      padding-top: 10px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    }
 
-      &:focus {
-        border: 1px solid black;
-        outline: none;
+    div.edit-topic-title {
+      input {
+        font-family: "#{$oc_headers_font}";
+        border: 1px solid transparent;
+        font-size: 20px;
+        width: 100%;
+
+        &:focus {
+          border: 1px solid black;
+          outline: none;
+        }
       }
     }
-  }
 
-  div.edit-topic-headline {
-    input {
-      font-family: "#{$oc_headers_font}";
-      border: 1px solid transparent;
-      font-size: 18px;
-      width: 100%;
+    div.edit-topic-headline {
+      input {
+        font-family: "#{$oc_headers_font}";
+        border: 1px solid transparent;
+        font-size: 18px;
+        width: 100%;
 
-      &:focus {
-        border: 1px solid black;
-        outline: none;
+        &:focus {
+          border: 1px solid black;
+          outline: none;
+        }
       }
     }
-  }
 
-  div.edit-topic-body {
-    div {
-      border: 1px solid transparent;
-      font-size: 14px;
-      outline: none;
-
-      &:focus {
-        border: 1px solid black;
+    div.edit-topic-body {
+      div {
+        border: 1px solid transparent;
+        font-size: 14px;
         outline: none;
+
+        &:focus {
+          border: 1px solid black;
+          outline: none;
+        }
       }
     }
   }
