--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -1,20 +1,33 @@
 div.company-header{
   background-color: white;
 
-  div.company-name {
-    margin-top: 30px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 21px;
-    padding-left: 45px;
-    padding-right: 45px;
+  img.company-logo {
+    width: auto;
+    height: 50px;
+  }
+
+  div.company-name-container {
+    width: 100%;
+    position: relative;
+    top: 0px;
+    left: 0px;
+
+    div.company-name {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 68px;
+      height: 50px;
+      text-align: left;
+      font-weight: bold;
+      font-size: 21px;
+      background-color: white;
+    }
   }
 
   div.company-description {
-    text-align: center;
+    text-align: left;
     font-size: 18px;
-    margin-bottom: 30px;
-    padding-left: 45px;
-    padding-right: 45px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
