limit image width by percentage instead of pixels to adapt to different screen sizes

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -103,15 +103,15 @@ div.topic-list {
       }
 
       img {
-        max-width: 500px;
+        max-width: 98%;
       }
 
       ul img {
-        max-width: 460px;
+        max-width: 98%;
       }
 
       ul ul img {
-        max-width: 420px;
+        max-width: 98%;
       }
 
       p {
