use Sortable.js instead of the sortable-list component since it has mobile support

--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -6,6 +6,16 @@ div.topic-list-edit{
     @include no-user-select();
   }
 
+  ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+  }
+  ul li{
+    margin: 0px;
+    padding: 0px;
+  }
+
   li.placeholder {
     height: 68px;
   }
