fix merge issue

--- a/scss/partials/_manage_topic.scss
+++ b/scss/partials/_manage_topic.scss
@@ -1,6 +1,6 @@
-div.topic-row.manage-topic{
+div.topic-row.manage-topics{
 
-  div.manage-topic-internal {
+  div.manage-topics-internal {
     margin: 10px;
     border: 1px solid rgb(237, 237, 237);
     background-color: white;
@@ -8,7 +8,7 @@ div.topic-row.manage-topic{
     vertical-align: middle;
     text-align: center;
 
-    div.manage-topic-cta{
+    div.manage-topics-cta{
       padding: 0;
       margin: 12px 0;
       font-size: 19px;
