--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -41,7 +41,12 @@ div.topic-list-edit{
       background-size: 20px 20px;
       background-position: center left;
       background-repeat: no-repeat;
-      padding-left: 30px;
+
+      div.topic-edit-handle {
+        float: left;
+        min-height: 50px;
+        width: 30px;
+      }
 
       &:hover{
         background-color: rgb(253, 253, 253);
