--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -1,6 +1,7 @@
 div.topic-list-edit{
   background-color: rgb(217, 217, 217);
   padding-bottom: 10px;
+  margin-top: 90px;
 
   & * {
     @include no-user-select();
