--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -1,3 +1,8 @@
+div.topic-list-edit-container {
+  margin-top: 90px;
+  padding-bottom: 10px;
+}
+
 div.topic-list{
   background-color: rgb(217, 217, 217);
   content: "";
