fix svg icon size

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -18,6 +18,11 @@ div.topic-list {
         height: 30px;
         float: left;
       }
+      svg {
+        width: 30px;
+        height: 30px;
+        float: left;
+      }
 
       div.topic-title {
         float: left;
