--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -1,6 +1,26 @@
 div.company-header{
   background-color: white;
 
+  div.navbar-editing {
+    width: 100%;
+    height: 50px;
+
+    button {
+      margin-top: 15px;
+      font-size: 16px;
+      color: $oc_blue;
+      &.cancel-bt {
+        float: left;
+        margin-left: 30px;
+      }
+
+      &.save-bt {
+        float: right;
+        margin-right: 30px;
+      }
+    }
+  }
+
   div.company-header-top {
 
     div.company-logo-container{
@@ -63,7 +83,6 @@ div.company-header{
   div.company-description {
     text-align: left;
     font-size: 18px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 0 10px 15px;
   }
 }
