--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -3,15 +3,13 @@ div.topic-list {
   div.topic {
     margin-left: 0px;
     margin-right: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 15px;
     margin-bottom: 10px;
     min-height: 100px;
     border-bottom: 1px solid #DFDFDF; /* gray */
     background-color: white;
 
     div.topic-header {
-      padding-top: 20px;
 
       .topic-image {
         width: 30px;
@@ -21,6 +19,7 @@ div.topic-list {
 
       div.topic-title {
         float: left;
+        margin-left: 5px;
         font-size: 19px;
         font-weight: bold;
       }
@@ -28,8 +27,7 @@ div.topic-list {
 
     div.topic-headline {
       font-size: 17px;
-      padding-top: 5px;
-      padding-bottom: 5px;
+      padding: 5px 0px;
       width: 100%;
 
       &.collapse {
