name and description color

--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -76,6 +76,7 @@ div.company-header{
       font-weight: bold;
       font-size: 21px;
       background-color: white;
+      color: #2d2d2d;
     }
   }
 
@@ -88,6 +89,7 @@ div.company-header{
       margin-top: 10px;
       margin-bottom: 10px;
       margin-left: 15px;
+      color: #2d2d2d;
     }
   }
 }
