topic title and headline color

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -22,6 +22,7 @@ div.topic-list {
         margin-left: 5px;
         font-size: 19px;
         font-weight: bold;
+        color: #2d2d2d;
       }
     }
 
@@ -29,6 +30,7 @@ div.topic-list {
       font-size: 17px;
       padding: 5px 0px;
       width: 100%;
+      color: #2d2d2d;
 
       &.collapse {
         height: 0px;
