--- a/scss/partials/_category_nav.scss
+++ b/scss/partials/_category_nav.scss
@@ -1,14 +1,15 @@
 div.company-dashboard {
 
   div.category-nav {
-    border-top: 1px solid #DFDFDF; /* gray */
-    border-bottom: 1px solid #DFDFDF; /* gray */
+    border-top: 1px solid #979797; /* gray */
+    border-bottom: 1px solid #979797; /* gray */
     background-color: white;
     width: 100%;
     z-index: 2;
-    padding: 0px;
+    padding: 2px 0px;
     margin: 0px;
     width: 100%;
+    height: 46px;
     -webkit-backface-visibility: hidden;
 
     div.category {
@@ -16,9 +17,8 @@ div.company-dashboard {
       padding-left: 15px;
       padding-right: 15px;
       float: left;
-      min-height: 40px;
       /* vertically center the text */
-      padding-top: 10px;
+      padding-top: 15px;
       vertical-align: middle;
       /* horizontally center the text */
       text-align: center;
@@ -27,11 +27,12 @@ div.company-dashboard {
 
       div.category-label {
         font-size: 16px;
+        line-height: 0.1;
         padding-left: 5px;
         padding-right: 5px;
         display: inline-block;
-        color: #A6A6A3; /* gray */
-        min-height: 30px;
+        color: #8b8a8a;
+        height: 18px;
       }
 
       &.active div.category-label {
