fix browser_type import

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 // General stuff
 @import "partials/_base";
 @import "partials/_colors";
-@import "partials/_browser_type";
+@import "modules/_browser_type";
 @import "modules/_fonts";
 @import "modules/_no_user_select";
 
