color topic icons with gray instead of black

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -17,6 +17,10 @@ div.topic-list {
         float: left;
       }
 
+      svg path, svg polygon {
+        fill: #8b8a8a;
+      }
+
       div.topic-title {
         float: left;
         margin-top: 5px;
