remove top margin for #app

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -18,6 +18,7 @@ Comment font-weight to font name mapping: https://developer.mozilla.org/en-US/do
 html, body {
   font-family: $oc_main_font;
   height: 100%;
+  background-color: #d9d9d9;
 }
 
 h1, h2, h3, h4, h5, h6, .oc-header {
@@ -45,11 +46,6 @@ a:hover, a:hover *{
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
-
-div#app {
-  margin-top: 10px;
-}
-
 
 /*
  * Main content
