make sure the tinymce editor doesn't cover the navbar

--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -7,6 +7,7 @@ div.company-header{
     background-color: white;
     position: fixed;
     top: 0px;
+    z-index: 2;
 
     button {
       margin-top: 15px;
