leave some space above the topic editing

--- a/scss/partials/_edit_topic.scss
+++ b/scss/partials/_edit_topic.scss
@@ -1,6 +1,7 @@
 div.edit-topic {
   background-color: transparent;
   padding: 10px;
+  margin-top: 52px;
 
   div.edit-topic-internal{
     background-color: white;
