--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -25,80 +25,84 @@ div.company-header{
     }
   }
 
-  div.company-header-top {
-    padding-top: 22px;
+  div.company-header-internal {
+    padding: 0 70px;
+    
+    div.company-header-top {
+      padding-top: 22px;
 
-    div.company-logo-container{
-      padding-left: 15px;
-      width: 150px;
-      float: left;
+      div.company-logo-container{
+        padding-left: 15px;
+        width: 150px;
+        float: left;
 
-      img.company-logo {
-        max-width: 140px;
-        max-height: 70px;
-      }
-    }
-
-    div.buttons-container {
-      padding-right: 15px;
-      width: 160px;
-      float: right;
-      text-align: right;
-
-      button.oc-btn {
-        width: 25px;
-        height: 21px;
-        margin: 0px;
-        padding: 0px;
-        border: 0px;
-        outline: none;
-
-        &.bullhorn {
-          margin-right: 15px;
+        img.company-logo {
+          max-width: 140px;
+          max-height: 70px;
         }
+      }
 
-        & img {
+      div.buttons-container {
+        padding-right: 15px;
+        width: 160px;
+        float: right;
+        text-align: right;
+
+        button.oc-btn {
+          width: 25px;
           height: 21px;
-        }
-
-        &:focus, &:active{
+          margin: 0px;
+          padding: 0px;
+          border: 0px;
           outline: none;
+
+          &.bullhorn {
+            margin-right: 15px;
+          }
+
+          & img {
+            height: 21px;
+          }
+
+          &:focus, &:active{
+            outline: none;
+          }
         }
       }
     }
-  }
 
-  div.company-name-container {
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 2;
+    div.company-name-container {
+      width: 100%;
+      top: 0px;
+      left: 0px;
+      z-index: 2;
 
-    div.company-name {
-      padding-top: 20px;
-      padding-bottom: 9px;
-      padding-left: 20px;
-      height: 46px;
-      text-align: left;
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 0.9;
-      background-color: white;
-      color: #2d2d2d;
+      div.company-name {
+        padding-top: 20px;
+        padding-bottom: 9px;
+        padding-left: 20px;
+        height: 46px;
+        text-align: left;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 0.9;
+        background-color: white;
+        color: #2d2d2d;
+      }
     }
-  }
 
-  div.company-description-container {
-    width: 100%;
+    div.company-description-container {
+      width: 100%;
 
-    div.company-description {
-      text-align: left;
-      font-size: 16px;
-      line-height: 1.2;
-      margin-top: 0px;
-      margin-bottom: 20px;
-      margin-left: 20px;
-      color: #2d2d2d;
+      div.company-description {
+        text-align: left;
+        font-size: 16px;
+        line-height: 1.2;
+        margin-top: 0px;
+        margin-bottom: 20px;
+        margin-left: 20px;
+        color: #2d2d2d;
+      }
     }
   }
 }
