--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -9,6 +9,10 @@ div.topic-list {
     border-bottom: 1px solid #DFDFDF; /* gray */
     background-color: white;
 
+    @media screen and (min-width: $max_mobile_width) {
+      height: 200px;
+    }
+
     div.topic-header {
 
       .topic-image {
