--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -7,8 +7,14 @@ div.topic-list{
   background-color: rgb(217, 217, 217);
   content: "";
 
-  div.topic-list-internal {
+  ul.topic-list-internal {
+    padding: 0;
+    list-style-type: none;
+    text-align: center;
+    margin: 5px 20px;
+
     &.content-loaded:empty {
+
       text-align: center;
       font-size: 18px;
       padding-top: 100px;
@@ -20,17 +26,31 @@ div.topic-list{
         content: "This category is empty. Add a topic below.";
       }
     }
-  }
+  
 
-  div.topic-row{
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
+    li.topic-row{
 
-    &.floating-edit-topic-button {
-      position: fixed;
-      bottom: 0px;
-      background-color: rgba(255, 255, 255, 0.4);
+      @media screen and (max-width: $max_mobile_width){
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+      }
+
+      @media screen and (min-width: $max_mobile_width) {
+        width: 400px;
+        height: 200px;
+        overflow: hidden;
+        padding: 10px;
+        float: left;
+      }
+
+
+
+      &.floating-edit-topic-button {
+        position: fixed;
+        bottom: 0px;
+        background-color: rgba(255, 255, 255, 0.4);
+      }
     }
   }
 }
