--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -10,7 +10,10 @@ div.topic-list{
   ul.topic-list-internal {
     list-style: none;
     padding: 0;
-    margin: 0 auto;
+
+    @media screen and (min-width: $max_mobile_width) {
+      margin: 0 auto;
+    }
 
     &.content-loaded:empty {
 
