--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -2,7 +2,7 @@
  .sidebar {
     display: none;
 }
-@media screen and (min-width: 768px) {
+@include big_web(){
     .sidebar {
         position: fixed;
         top: 51px;
