--- a/scss/mixins/_base.scss
+++ b/scss/mixins/_base.scss
@@ -53,3 +53,41 @@
     @content;
   }
 }
+
+/// Triangle helper mixin
+/// @param {Direction} $direction - Triangle direction, either `top`, `right`, `bottom` or `left`
+/// @param {Color} $color [currentcolor] - Triangle color
+/// @param {Length} $size [1em] - Triangle size
+@mixin triangle($direction, $color: currentcolor, $size: 1em) {
+  @if not index(top right bottom left, $direction) {
+    @error "Direction must be either `top`, `right`, `bottom` or `left`.";
+  }
+
+  width: 0;
+  height: 0;
+  content: '';
+  z-index: 2;
+
+  $opposite-direction: top;
+  @if $direction == top {
+    $opposite-direction: bottom;
+  } @else if $direction == bottom {
+    $opposite-direction: top;
+  } @else if $direction == left {
+    $opposite-direction: right;
+  } @else if $direction == right {
+    $opposite-direction: left;
+  }
+
+  border-#{$opposite-direction}: ($size * 1.5) solid $color;
+
+  $perpendicular-borders: $size solid transparent;
+
+  @if $direction == top or $direction == bottom {
+    border-left:   $perpendicular-borders;
+    border-right:  $perpendicular-borders;
+  } @else if $direction == right or $direction == left {
+    border-bottom: $perpendicular-borders;
+    border-top:    $perpendicular-borders;
+  }
+}
