fix mixins for mobile and big_web

--- a/scss/mixins/_base.scss
+++ b/scss/mixins/_base.scss
@@ -43,13 +43,13 @@
 }
 
 @mixin mobile(){
-  @media screen and (max-width: $max_mobile_width){
+  @media screen and (max-width: #{($min_big_web_width - 1)}px){
     @content;
   }
 }
 
 @mixin big_web(){
-  @media screen and (min-width: $min_big_web_width){
+  @media screen and (min-width: #{$min_big_web_width}px){
     @content;
   }
 }
