--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,3 +47,4 @@
 @import "partials/_manage_topics";
 @import "partials/_topic_list_edit";
 @import "partials/_loading";
+@import "partials/_topic_body";
