--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -8,8 +8,15 @@ div.topic-list-edit-container {
 }
 
 div.topic-list{
-  background-color: rgb(217, 217, 217);
   content: "";
+
+  @include mobile(){
+    background-color: #d9d9d9;
+  }
+
+  @include big_web(){
+    background-color: #f1f1f1;
+  }
 
   ul.topic-list-internal {
     list-style: none;
