add expanded topic style

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,3 +48,4 @@
 @import "partials/_topic_list_edit";
 @import "partials/_loading";
 @import "partials/_topic_body";
+@import "partials/_expanded_topic"
