topic navigation is a mixin to be included in more places

--- a/scss/mixins/_base.scss
+++ b/scss/mixins/_base.scss
@@ -91,3 +91,25 @@
     border-top:    $perpendicular-borders;
   }
 }
+
+@mixin topic_navigation(){
+  div.topic-navigation{
+    width: 100%;
+    margin-bottom: 15px;
+
+    div a {
+      font-size: 14px;
+      line-height: 1;
+      color: #707070;
+      text-decoration: none;
+    }
+
+    div.previous {
+      float: left;
+    }
+
+    div.next {
+      float: right;
+    }
+  }
+}
