add topic-body-nav-container div that contains the topic body and the history navigation

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -130,6 +130,11 @@ div.topic-list {
       }
     }
 
-    @include topic_navigation();
+    div.topic-body-nav-container{
+      overflow: hidden;
+      height: 0px;
+
+      @include topic_navigation();
+    }
   }
 }
