fix main background color

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -18,7 +18,7 @@ Comment font-weight to font name mapping: https://developer.mozilla.org/en-US/do
 html, body {
   font-family: $oc_main_font;
   height: 100%;
-  background-color: #d9d9d9;
+  background-color: #f1f1f1;
 }
 
 h1, h2, h3, h4, h5, h6, .oc-header {
