use opencompany logo in the navbar

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -37,6 +37,11 @@ nav.navbar {
     margin: 0px;
     padding: 0px;
 
+    img.open-company-logo{
+      width: 150px;
+      margin-top: 15px;
+    }
+
     &.editing-mode {
 
       div.editing-title {
