cursor pointer on expandable topic cards, hover background-color do not affect expanded topic

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -11,6 +11,7 @@ div.topic-list {
 
     @include big_web(){
       height: 154px;
+      cursor: pointer;
 
       &:hover {
         background-color: #E5E4E4;
