--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -61,7 +61,7 @@ nav.navbar {
         button.cancel-bt {
           font-size: 15px;
           margin: 15px 0px;
-          color: $oc_blue;
+          color: $oc_red;
 
           &:disabled {
             opacity: 0.4;
@@ -71,11 +71,11 @@ nav.navbar {
 
       div.right-button {
         float: right;
-        color: $oc_blue;
 
         button.save-bt {
           font-size: 15px;
           margin: 15px 0px;
+          color: $oc_green;
 
           &:disabled {
             opacity: 0.4;
